# asteroids-rs

./: Cargo.toml  bugs.md  roadmap.md
src/: app.rs  commands.rs  consts.rs  dispatch.rs  ecs.rs  entity.rs  events.rs  game_common.rs  game_ecs.rs  game_entity.rs  game_logics.rs  game_physics.rs  game_systems.rs  handle.rs  input.rs  main.rs  physics.rs  scene.rs  systems.rs  worker.rs  workers.rs
src/assets/: mod.rs  models.rs  shaders.rs  types.rs
src/game/: commands.rs  controller.rs  ecs.rs  entities.rs  logics.rs  loop.rs  mod.rs  physics.rs  players.rs  state.rs  systems.rs
src/rendering/: backend.rs  buffer.rs  commands.rs  descriptors.rs  frame.rs  image.rs  logical_device.rs  mod.rs  models.rs  physical_device.rs  pipeline.rs  render_graph.rs  render_graph_operation.rs  renderer.rs  shaders.rs  swapchain.rs
