[package]
name = "asteroids-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
glam = { version = "0.30.3", features = ["bytemuck"] }
rand = "0.9.1"
smallvec = "1.15.1"
vulkano = "0.35.1"
vulkano-shaders = { version = "0.35.0", features = ["shaderc-debug"] }
winit = "0.30.11"
